--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
 <body>
     <div class="container">
         <div class="left">
-            <div class="background">
-                <img src="halie-west-25xggax4bSA-unsplash.jpg" alt="picture">
-            </div>
             <div class="logo">
-                <img src="odin-lined.png" alt="odin_logo">
-                <p>ODIN</p>
+                <img src="odin-lined.png" alt="odin_logo" class="logo_head">
+                <h1 class="logo_name">ODIN</h1>
             </div>
         </div>
         <div class="right">
@@ -25,20 +22,26 @@
             <p>You <em>know</em> you want to</p>
             <div>
                 <form action="submit">
+                    <p>Let's do this!</p>
                     <section>
-                        <legend>Let's do this!</legend>
-                        <label for="first_name">FIRST NAME</label>
-                        <input type="text" id="first_name" name="first_name" placeholder="">
-                        <label for="last_name">LAST NAME</label>
-                        <input type="text" id="last_name" name="last_name" placeholder="">
-                        <label for="user_email">EMAIL</label>
-                        <input type="email" id="user_email" name="user_email" placeholder="you@example.com">
-                        <label for="user_phone">PHONE NUMBER</label>
-                        <input type="number" id="user_phone" name="user_phone">
-                        <label for="password">PASSWORD</label>
-                        <input type="password" id="password" name="password">
-                        <label for="confirm_pass">CONFIRM PASSWORD</label>
-                        <input type="pasword" id="confirm_pass" name="confirm_pass">
+                        <div>
+                            <label for="first_name">FIRST NAME</label>
+                            <input type="text" id="first_name" name="first_name" placeholder="">
+                            <label for="last_name">LAST NAME</label>
+                            <input type="text" id="last_name" name="last_name" placeholder="">
+                        </div>
+                        <div>
+                            <label for="user_email">EMAIL</label>
+                            <input type="email" id="user_email" name="user_email" placeholder="you@example.com">
+                            <label for="user_phone">PHONE NUMBER</label>
+                            <input type="number" id="user_phone" name="user_phone">
+                        </div>
+                        <div>
+                            <label for="password">PASSWORD</label>
+                            <input type="password" id="password" name="password">
+                            <label for="confirm_pass">CONFIRM PASSWORD</label>
+                            <input type="pasword" id="confirm_pass" name="confirm_pass">
+                        </div>
                     </section>
                     <button type="submit">Create account</button>
                 </form>
