--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <img src="odin-lined.png" alt="odin_logo" class="logo_head">
                 <h1 class="logo_name">ODIN</h1>
             </div>
+            <h4>Photo by Hallie West on Unsplash</h4>
         </div>
         <div class="right">
             <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.
