--- a/index.html
+++ b/index.html
@@ -23,30 +23,36 @@
             <p>You <em>know</em> you want to</p>
             <div>
                 <form action="submit">
-                    <p>Let's do this!</p>
                     <section>
+                        <p>Let's do this!</p>
                         <div>
                             <label for="first_name">FIRST NAME</label>
                             <input type="text" id="first_name" name="first_name" placeholder="">
+                        </div>
+                        <div>
                             <label for="last_name">LAST NAME</label>
                             <input type="text" id="last_name" name="last_name" placeholder="">
                         </div>
                         <div>
                             <label for="user_email">EMAIL</label>
                             <input type="email" id="user_email" name="user_email" placeholder="you@example.com">
+                        </div>
+                        <div>
                             <label for="user_phone">PHONE NUMBER</label>
                             <input type="number" id="user_phone" name="user_phone">
                         </div>
                         <div>
                             <label for="password">PASSWORD</label>
                             <input type="password" id="password" name="password">
+                        </div>
+                        <div>
                             <label for="confirm_pass">CONFIRM PASSWORD</label>
                             <input type="pasword" id="confirm_pass" name="confirm_pass">
                         </div>
                     </section>
                     <button type="submit">Create account</button>
                 </form>
-                <p>Already have an account? <a href="#">Log in</a></p>
+                <p class="login">Already have an account? <a href="#">Log in</a></p>
             </div>
         </div>
     </div>
