progress before changing which elements to flex

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>You <em>know</em> you want to</p>
             <div>
                 <form action="submit">
-                    <section>
+                    <div class="fields">
                         <p>Let's do this!</p>
                         <div>
                             <label for="first_name">FIRST NAME</label>
@@ -49,7 +49,7 @@
                             <label for="confirm_pass">CONFIRM PASSWORD</label>
                             <input type="pasword" id="confirm_pass" name="confirm_pass">
                         </div>
-                    </section>
+                    </div>
                     <button type="submit">Create account</button>
                 </form>
                 <p class="login">Already have an account? <a href="#">Log in</a></p>
