--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                         </div>
                         <div>
                             <label for="password">PASSWORD</label>
-                            <input type="password" id="password" name="password">
+                            <input type="password" id="password" name="password" class="error">
                         </div>
                         <div>
                             <label for="confirm_pass">CONFIRM PASSWORD</label>
-                            <input type="pasword" id="confirm_pass" name="confirm_pass">
+                            <input type="password" id="confirm_pass" name="confirm_pass" class="error">
                         </div>
                     </div>
                     <button type="submit">Create account</button>
